Changelog:
v1.7.3	added default directory option
		added forumlink in preferences
		speed up image preview loading
		AppManager:	delete saved apps
					create shortcut on home
		improved search
		improved layout for xhdpi devices
v1.7.2	Bug Fixes (new folder, rename folder, move/copy)
		Open Zip with other Apps Options
		load preferences changes
v1.7.1	Added App Manager
		small changes
v1.7	Changes on Actionbar
		Added Icon for Bookmarks
		Improved Details Dialog
		Infodialog on first start
v1.6	Added ViewMode option
		remove old stuff
		some small changes
v1.5	Added Bookmarks
		Added Sort Option
		Some New Icons
v1.4 	Multi Move
		Multi Icons
		Updated Folder Info
		Bugs fixed
		removed useless things
v1.3: 	First Release