@@ -29,64 +29,67 @@ public final class R {
     }
     public static final class drawable {
         public static final int appicon=0x7f020000;
-        public static final int bookmark=0x7f020001;
-        public static final int buttonaction=0x7f020002;
-        public static final int buttonline=0x7f020003;
-        public static final int buttonlinepng=0x7f020004;
-        public static final int config32=0x7f020005;
-        public static final int copy=0x7f020006;
-        public static final int create=0x7f020007;
-        public static final int delete=0x7f020008;
-        public static final int excel=0x7f020009;
-        public static final int folder=0x7f02000a;
-        public static final int folder_full=0x7f02000b;
-        public static final int html32=0x7f02000c;
-        public static final int ic_launcher=0x7f02000d;
-        public static final int image=0x7f02000e;
-        public static final int info1=0x7f02000f;
-        public static final int jar32=0x7f020010;
-        public static final int listmore=0x7f020011;
-        public static final int move=0x7f020012;
-        public static final int movies=0x7f020013;
-        public static final int multi=0x7f020014;
-        public static final int music=0x7f020015;
-        public static final int pdf=0x7f020016;
-        public static final int ppt=0x7f020017;
-        public static final int search=0x7f020018;
-        public static final int share=0x7f020019;
-        public static final int text=0x7f02001a;
-        public static final int warning=0x7f02001b;
-        public static final int word=0x7f02001c;
-        public static final int xml32=0x7f02001d;
-        public static final int zip=0x7f02001e;
+        public static final int appmanager=0x7f020001;
+        public static final int bookmark=0x7f020002;
+        public static final int buttonaction=0x7f020003;
+        public static final int buttonline=0x7f020004;
+        public static final int buttonlinepng=0x7f020005;
+        public static final int config32=0x7f020006;
+        public static final int copy=0x7f020007;
+        public static final int create=0x7f020008;
+        public static final int delete=0x7f020009;
+        public static final int excel=0x7f02000a;
+        public static final int folder=0x7f02000b;
+        public static final int folder_full=0x7f02000c;
+        public static final int html32=0x7f02000d;
+        public static final int ic_launcher=0x7f02000e;
+        public static final int image=0x7f02000f;
+        public static final int info1=0x7f020010;
+        public static final int jar32=0x7f020011;
+        public static final int listmore=0x7f020012;
+        public static final int move=0x7f020013;
+        public static final int movies=0x7f020014;
+        public static final int multi=0x7f020015;
+        public static final int music=0x7f020016;
+        public static final int pdf=0x7f020017;
+        public static final int ppt=0x7f020018;
+        public static final int search=0x7f020019;
+        public static final int share=0x7f02001a;
+        public static final int text=0x7f02001b;
+        public static final int warning=0x7f02001c;
+        public static final int word=0x7f02001d;
+        public static final int xml32=0x7f02001e;
+        public static final int zip=0x7f02001f;
     }
     public static final class id {
-        public static final int actioncopy=0x7f0b0022;
-        public static final int actiondelete=0x7f0b0023;
-        public static final int actionmove=0x7f0b0021;
+        public static final int actioncopy=0x7f0b0024;
+        public static final int actiondelete=0x7f0b0025;
+        public static final int actionmove=0x7f0b0023;
         public static final int actionsearch=0x7f0b0000;
-        public static final int actionselect=0x7f0b0025;
-        public static final int actionshare=0x7f0b0024;
+        public static final int actionselect=0x7f0b0027;
+        public static final int actionshare=0x7f0b0026;
         public static final int app_name=0x7f0b0009;
-        public static final int appmanager=0x7f0b002a;
-        public static final int avaible_size=0x7f0b001b;
+        public static final int appmanager=0x7f0b002e;
+        public static final int avaible_size=0x7f0b001d;
         public static final int backup_button_all=0x7f0b0005;
         public static final int backup_view=0x7f0b0004;
-        public static final int bookmarks=0x7f0b0027;
-        public static final int bottom_view=0x7f0b001e;
-        public static final int create=0x7f0b0026;
-        public static final int dateview=0x7f0b0020;
+        public static final int bookmarks=0x7f0b002b;
+        public static final int bottom_view=0x7f0b0020;
+        public static final int create=0x7f0b002a;
+        public static final int dateview=0x7f0b0022;
+        public static final int deleteapps=0x7f0b0029;
         public static final int directory_buttons=0x7f0b0002;
         public static final int dirs_label=0x7f0b0017;
         public static final int fifth_title=0x7f0b001a;
         public static final int files_label=0x7f0b0019;
-        public static final int finfo=0x7f0b0029;
+        public static final int finfo=0x7f0b002d;
         public static final int first_title=0x7f0b0016;
         public static final int fourth_title=0x7f0b0013;
+        public static final int freespace=0x7f0b001b;
         public static final int icon=0x7f0b0007;
         public static final int installdate=0x7f0b000b;
-        public static final int multis=0x7f0b0028;
-        public static final int multiselect_icon=0x7f0b001c;
+        public static final int multis=0x7f0b002c;
+        public static final int multiselect_icon=0x7f0b001e;
         public static final int myMain=0x7f0b0006;
         public static final int name=0x7f0b000c;
         public static final int name_label=0x7f0b000d;
@@ -94,15 +97,17 @@ public final class R {
         public static final int path_label=0x7f0b000f;
         public static final int progressBar=0x7f0b0003;
         public static final int quit=0x7f0b0015;
-        public static final int row_image=0x7f0b001d;
+        public static final int row_image=0x7f0b001f;
         public static final int scroll_text=0x7f0b0001;
         public static final int second_title=0x7f0b0018;
         public static final int select_icon=0x7f0b0008;
-        public static final int settings=0x7f0b002b;
+        public static final int settings=0x7f0b002f;
+        public static final int shortcut=0x7f0b0028;
+        public static final int six_title=0x7f0b001c;
         public static final int sizelayout=0x7f0b0012;
         public static final int third_title=0x7f0b0010;
         public static final int time_stamp=0x7f0b0011;
-        public static final int top_view=0x7f0b001f;
+        public static final int top_view=0x7f0b0021;
         public static final int total_size=0x7f0b0014;
         public static final int versionlabel=0x7f0b000a;
     }
@@ -126,11 +131,11 @@ public final class R {
         public static final int Numberoffiles=0x7f08001a;
         public static final int Numberoffolders=0x7f080019;
         public static final int TotalSize=0x7f08001c;
-        public static final int about=0x7f08006d;
         public static final int advancedsettings=0x7f080053;
         public static final int app_name=0x7f080000;
         public static final int appmanager=0x7f080058;
         public static final int apps=0x7f080060;
+        public static final int appsdeleted=0x7f080072;
         public static final int attach=0x7f080018;
         public static final int backedup=0x7f080065;
         public static final int backup=0x7f08005c;
@@ -154,6 +159,8 @@ public final class R {
         public static final int createnewfolder=0x7f080020;
         public static final int defaultdir=0x7f08006c;
         public static final int delete=0x7f080016;
+        public static final int deleteapps=0x7f08006f;
+        public static final int deleteappsmsg=0x7f080070;
         public static final int deletesearchsuggestions=0x7f080068;
         public static final int desc=0x7f080026;
         public static final int detailed=0x7f080056;
@@ -172,6 +179,7 @@ public final class R {
         public static final int folders=0x7f080023;
         public static final int folderwasrenamed=0x7f08002b;
         public static final int foundfiles=0x7f08002c;
+        public static final int freespace=0x7f080071;
         public static final int hiddenfiles=0x7f080034;
         public static final int image=0x7f080048;
         public static final int info=0x7f080002;
@@ -209,6 +217,8 @@ public final class R {
         public static final int setpath=0x7f080030;
         public static final int settings=0x7f080005;
         public static final int share=0x7f08001e;
+        public static final int shortcut=0x7f08006d;
+        public static final int shortcutcreated=0x7f08006e;
         public static final int showpreview=0x7f080035;
         public static final int simple=0x7f080055;
         public static final int singlebackup=0x7f08005d;
