@@ -174,6 +174,32 @@
             android:maxLines="1"
             android:minWidth="160dp"
             android:padding="3dp"
+            android:text="@string/freespace" />
+
+        <TextView
+            android:id="@+id/freespace"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="right|center_vertical"
+            android:textIsSelectable="false"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/six_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:maxLines="1"
+            android:minWidth="160dp"
+            android:padding="3dp"
             android:text="@string/AvaibleSize" />
 
         <TextView
