@@ -108,12 +108,12 @@
     <string name="deletesearchsuggestions">Delete Suggestions</string>
     <string name="suggestionscleared">Search suggestions cleared</string>
     <string name="searchprefs">Search Preferences</string>
-    <string name="enablesearchsuggestions">Searchsuggestions</string>
+    <string name="enablesearchsuggestions">Search Suggestions</string>
     <string name="defaultdir">Default Directory</string>
     <string name="shortcut">Create Shortcut</string>
     <string name="shortcutcreated">Shortcut created</string>
     <string name="deleteapps">Delete Apps</string>
     <string name="deleteappsmsg">Saved Apps will be deleted from SD Card!</string>
-    <string name="appsdeleted">Saved App removed from SD Card</string>
+    <string name="freespace">Free Space:</string>
 
 </resources>
